--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/Home.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/Home.cshtml
@@ -1,4 +1,4 @@
-﻿@model IPagedList<MyProject.Models.MemberRegistration>
+﻿@model IPagedList<MyProject.Models.Confirm_MemberRegistration>
 @using PagedList
 @using PagedList.Mvc
 @using MyProject.Models
@@ -113,7 +113,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    @Html.Partial("_MemberListForAdmin")
+                    @Html.Partial("VerificationListForHomePage")
                 </div>
             </div>
 
