--- a/EONFITNESSEMPIRE/MyProject/MyProject/assets/admin/layout3/css/less/layout.less
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/assets/admin/layout3/css/less/layout.less
@@ -261,8 +261,8 @@ body.boxed.bg-light-dark {
     .app > aside.aside-sm{background:inherit;
     width:470px;
   }
-}
 
-.theme-sltl .sidebar .logopanel h1 a{background:url(../../../global/images/logo/logo-dark.png) no-repeat!important}
+}
+/*.theme-sltl .sidebar .logopanel h1 a{background:url(../../../global/images/logo/logo-dark.png) no-repeat!important}
 .sidebar .logopanel h1 a{background:url(../../../global/images/logo/logo-dark.png) no-repeat}
-.theme-sdtd .sidebar .logopanel h1 a{background:url(../../../global/images/logo/logo-white.png) no-repeat}
+.theme-sdtd .sidebar .logopanel h1 a{background:url(../../../global/images/logo/logo-white.png) no-repeat}*/
