--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
@@ -31,9 +31,9 @@
     <!-- BEGIN SIDEBAR -->
     <div class="sidebar">
         <div class="logopanel">
-            <h1> 
-                <a href="#">LOGO</a>
-            </h1>
+            <h4> 
+                <a href="#">EON FITNESS EMPIRE</a>
+            </h4>
         </div>
         <div class="sidebar-inner">
             <div class="sidebar-top">
@@ -41,9 +41,9 @@
                     <div class="pull-left image">
                         <img src="" style="width: 45px; height: 45px;" class="img-circle" alt="">
                     </div>
-                    <div class="pull-left info">
+                    @*<div class="pull-left info">
                         <p style="color:white;margin-left: 23px;">EON FITNESS EMPIRE</p>
-                    </div>
+                    </div>*@
                 </div>
                 
             </div>
