--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/ForgetPassword.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/ForgetPassword.cshtml
@@ -22,7 +22,7 @@
                 <a href="/Member/RegistrationByMember" class="btn btn-primary" style="width:106%">Registration</a>
             </div>
             <div class="col-md-6">
-                <a href="/Member/RegistrationByMember" class="btn btn-primary" style="width:100%">Forget Password</a>
+                <a href="/Admin/ForgetPassword" class="btn btn-primary" style="width:100%">Forget Password</a>
             </div>
         </div>
     </div>
