--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberEditData.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberEditData.cshtml
@@ -105,7 +105,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label">Status</label>
-                                            <input class="form-control" name="Flag" id="Flag" type="checkbox">
+                                            <input class="form-control" name="Flag" value="@Html.Raw(Html.AttributeEncode(Model.Flag))" id="Flag" type="checkbox">
                                             @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
