--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageDataEdit.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageDataEdit.cshtml
@@ -14,7 +14,7 @@
         <div class="alert alert-success" role="alert">
             @ViewBag.Message
         </div>
-    }
+    }  @Html.HiddenFor(model => model.ID)
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-primary">
@@ -24,25 +24,29 @@
                 <div class="panel-content">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="form-group">
-                                <label class="control-label">Number of Month</label>
-                                <input class="form-control" name="Pkg_Month" id="Pkg_Month" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Month))" placeholder="Enter MemberName">
-                                @Html.ValidationMessageFor(m => m.Pkg_Month, "", new { @class = "text-danger" })
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label">Number of Month</label>
+                                    <input class="form-control" name="Pkg_Month" id="Pkg_Month" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Month))" placeholder="Enter MemberName">
+                                    @Html.ValidationMessageFor(m => m.Pkg_Month, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Package Ammount</label>
+                                    <input class="form-control" name="Pkg_Ammount" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Ammount))" id="Pkg_Ammount" placeholder="Enter MemberName">
+                                    @Html.ValidationMessageFor(m => m.Pkg_Ammount, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Status</label>
+                                    <input class="form-control" name="Flag" value="YES" id="Flag" type="checkbox" style="position: relative;">
+                                    @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-embossed btn-primary">Save</button>
+                                    <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label class="control-label">Package Ammount</label>
-                                <input class="form-control" name="Pkg_Ammount" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Ammount))" id="Pkg_Ammount" placeholder="Enter MemberName">
-                                @Html.ValidationMessageFor(m => m.Pkg_Ammount, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">Status</label>
-                                <input class="form-control" name="Flag" value="YES" id="Flag" type="checkbox">
-                                @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-embossed btn-primary">Save</button>
-                                <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
-                            </div>
+                            <div class="col-md-6"></div>
+                           
                         </div>
                     </div>
                 </div>
