--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/SidebarPartial.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/SidebarPartial.cshtml
@@ -4,6 +4,7 @@
     <li><a href="/admin/MemberListForAdmin"><i class="icon-users"></i><span>Member List</span></a></li>
     <li><a href="/admin/MemberRegistration"><i class="icon-users"></i><span>Member Registration</span></a></li>
     <li><a href="/admin/UserLoginList"><i class="icon-users"></i><span>User Login List</span></a></li>
+    <li><a href="/admin/PackageListForAdmin"><i class="icon-users"></i><span>Package Details List</span></a></li>
 }
 else if (User.IsInRole("U"))
 {
