--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageDataEdit.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageDataEdit.cshtml
@@ -14,7 +14,7 @@
         <div class="alert alert-success" role="alert">
             @ViewBag.Message
         </div>
-    }  @Html.HiddenFor(model => model.ID)
+    }  
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-primary">
@@ -25,9 +25,15 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="col-md-6">
+                                @Html.HiddenFor(model => model.ID)
                                 <div class="form-group">
                                     <label class="control-label">Number of Month</label>
-                                    <input class="form-control" name="Pkg_Month" id="Pkg_Month" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Month))" placeholder="Enter MemberName">
+                                    <input class="form-control" name="NumberOfMonth" id="NumberOfMonth" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Month))" placeholder="Enter Number of Month">
+                                    @Html.ValidationMessageFor(m => m.NumberOfMonth, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Package Group(Month or Year)</label>
+                                    <input class="form-control" name="Pkg_Month" id="Pkg_Month" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Month))" placeholder="Enter Month or Year">
                                     @Html.ValidationMessageFor(m => m.Pkg_Month, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
@@ -35,9 +41,11 @@
                                     <input class="form-control" name="Pkg_Ammount" value="@Html.Raw(Html.AttributeEncode(Model.Pkg_Ammount))" id="Pkg_Ammount" placeholder="Enter MemberName">
                                     @Html.ValidationMessageFor(m => m.Pkg_Ammount, "", new { @class = "text-danger" })
                                 </div>
+                                @{
+                                    string status = (Model.Flag == "YES" ? "checked" : "");
+                                }
                                 <div class="form-group">
-                                    <label class="control-label">Status</label>
-                                    <input class="form-control" name="Flag" value="YES" id="Flag" type="checkbox" style="position: relative;">
+                                    <label class="control-label">Status <input name="Flag" value="YES" id="Flag" type="checkbox" style="width: 50px;height: 20px;" @status></label>
                                     @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
