--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageEntry.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageEntry.cshtml
@@ -23,25 +23,34 @@
                 <div class="panel-content">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="form-group">
-                                <label class="control-label">Number of Month</label>
-                                <input class="form-control" name="Pkg_Month" id="Pkg_Month" placeholder="Enter MemberName">
-                                @Html.ValidationMessageFor(m => m.Pkg_Month, "", new { @class = "text-danger" })
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label">Number of Month</label>
+                                    <input class="form-control" name="NumberOfMonth" id="NumberOfMonth" placeholder="Enter Number of Month">
+                                    @Html.ValidationMessageFor(m => m.NumberOfMonth, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Package Group</label>
+                                    <input class="form-control" name="Pkg_Month" id="Pkg_Month" placeholder="Enter Month or Year">
+                                    @Html.ValidationMessageFor(m => m.Pkg_Month, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Package Ammount</label>
+                                    <input class="form-control" name="Pkg_Ammount" id="Pkg_Ammount" placeholder="Enter Package Ammount">
+                                    @Html.ValidationMessageFor(m => m.Pkg_Ammount, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">Status</label>
+                                    <input class="form-control" name="Flag" value="YES" id="Flag" type="checkbox">
+                                    @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-embossed btn-primary">Save</button>
+                                    <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label class="control-label">Package Ammount</label>
-                                <input class="form-control" name="Pkg_Ammount" id="Pkg_Ammount" placeholder="Enter MemberName">
-                                @Html.ValidationMessageFor(m => m.Pkg_Ammount, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">Status</label>
-                                <input class="form-control" name="Flag" value="YES" id="Flag" type="checkbox">
-                                @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-embossed btn-primary">Save</button>
-                                <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
-                            </div>
+                            <div class="col-md-6"></div>
+                            
                         </div>
                     </div>
                 </div>
