--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageListForAdmin.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageListForAdmin.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 Package Details
             </div>
@@ -20,7 +20,7 @@
                             <tr>
                                 <th> @Html.DisplayNameFor(model => model.First().NumberOfMonth) </th>
                                 <th> @Html.DisplayNameFor(model => model.First().Pkg_Ammount)</th>
-                                <th> @Html.DisplayNameFor(model => model.First().CreatedOn) </th>                               
+                                <th> @Html.DisplayNameFor(model => model.First().CreatedOn) </th>
                                 <th>Action</th>
                             </tr>
                         </thead>
