--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberListForAdmin.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberListForAdmin.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 Member List
             </div>
@@ -35,7 +35,7 @@
                                     <td>
                                         @{
                                             var images = @Url.Content("~/Images/ProfilePic/" + item.ProfilePic);
-                                            
+
                                         }
                                         <img src="@images" style="height:30px; width:30px; margin-top: 12px;" class="img-circle special-img" />
                                         @Html.DisplayFor(modelItem => item.MemberName)
@@ -69,11 +69,12 @@
                                             }
                         </tbody>
                     </table>
-                            @Html.PagedListPager(Model, page => Url.Action("MemberListForAdmin", new { page }))
-                 </div>
-                    <!-- /.table-responsive -->
+                    @Html.PagedListPager(Model, page => Url.Action("MemberListForAdmin", new { page }))
                 </div>
+                <!-- /.table-responsive -->
+            </div>
             <!-- /.panel-body -->
         </div>
     </div>
+
 </div>
