--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageEntry.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/PackageEntry.cshtml
@@ -16,8 +16,8 @@
     }
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-primary">
-                <div class="panel-header">
+            <div class="panel panel-info">
+                <div class="panel-heading">
                     <h2><strong>Package Entry</strong></h2>
                 </div>
                 <div class="panel-content">
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6"></div>
-                            
+
                         </div>
                     </div>
                 </div>
