--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/UserLoginList.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/UserLoginList.cshtml
@@ -10,9 +10,9 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-primary">
+        <div class="panel panel-info">
             <div class="panel-heading">
-               All User List
+                All User List
             </div>
             <div class="panel-body">
                 <div class="table-responsive">
@@ -43,7 +43,7 @@
                                         @Html.DisplayFor(modelItem => item.Mobile)
                                     </td>
                                     <td>
-                                        @{ 
+                                        @{
                                             string role = "";
                                             if (item.UserRole == "A")
                                             {
