--- a/EONFITNESSEMPIRE/MyProject/MyProject/assets/global/plugins/bootstrap/css/bootstrap.css
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/assets/global/plugins/bootstrap/css/bootstrap.css
@@ -6,7 +6,7 @@ audio:not([controls]){display:none;height:0}
 [hidden],template{display:none}
 a{background:0 0}
 a:active,a:hover{outline:0}
-abbr[title]{border-bottom:1px dotted}
+abbr[title]/*{border-bottom:1px dotted}*/
 b,strong{font-weight:700}
 dfn{font-style:italic}
 h1{margin:.67em 0;font-size:2em}
