--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
@@ -95,8 +95,8 @@
         <div class="footer">
             <div class="copyright">
                 <p class="pull-left sm-pull-reset">
-                    <span>Copyright <span class="copyright">©</span> 2015 </span>
-                    <span>THEMES LAB</span>.
+                    <span>Copyright <span class="copyright">©</span> @DateTime.Now.Year </span>
+                    <span>Code Blitz</span>.
                 <span>All rights reserved. </span>
                 </p>
                 <p class="pull-right sm-pull-reset">
