--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberListForAdmin.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberListForAdmin.cshtml
@@ -61,6 +61,7 @@
                                         <h4>
                                             <abbr title="Edit '@item.MemberName'"><a href="@Url.Action("MemberEditData", "Admin", new { @id = item.ID })"><span class="glyphicon glyphicon-edit"></span></a></abbr>
                                             <abbr title="Show Profile '@item.MemberName'"><a href="@Url.Action("MemberProfileDetails", "Admin", new { @id = item.ID })"><span class=" glyphicon glyphicon-info-sign"></span></a></abbr>
+                                            <abbr title="Make Payment for '@item.MemberName'"><a href="@Url.Action("MemberPayment", "Admin", new { @id = item.ID })"><span class="fa fa-rupee"></span></a></abbr>
                                             <abbr title="Delete '@item.MemberName'"><a href="@Url.Action("MemberDataDelete", "Admin", new { @id = item.ID })"><span class="glyphicon glyphicon-trash" style="color: red"></span></a></abbr>
                                             <abbr title="Physical Assessment '@item.MemberName'"><a href="@Url.Action("PhysicalAssessment", "Admin", new { @id = item.ID })"><span class="glyphicon glyphicon-cog" style="color: red"></span></a></abbr>
                                         </h4>
